Add documentation for list all tigers api and refactor response for list all tigers api
