# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /
+basePath: /api
 definitions:
   github_com_sourava_tiger_business_auth_request.LoginRequest:
     properties:
@@ -22,6 +22,45 @@ definitions:
       token:
         example: jwt.token
         type: string
+    type: object
+  github_com_sourava_tiger_business_tiger_response.ListAllTigersHandlerResponse:
+    properties:
+      payload:
+        $ref: '#/definitions/github_com_sourava_tiger_business_tiger_response.ListAllTigersResponse'
+      success:
+        example: true
+        type: boolean
+    type: object
+  github_com_sourava_tiger_business_tiger_response.ListAllTigersResponse:
+    properties:
+      tigers:
+        items:
+          $ref: '#/definitions/github_com_sourava_tiger_business_tiger_response.TigerResponse'
+        type: array
+    type: object
+  github_com_sourava_tiger_business_tiger_response.TigerResponse:
+    properties:
+      LastSeenLongitude:
+        example: 10.2
+        type: number
+      dateOfBirth:
+        example: "2020-01-13"
+        type: string
+      id:
+        example: 1
+        type: integer
+      lastSeenLatitude:
+        example: 1.1
+        type: number
+      lastSeenTimestamp:
+        example: 1691354650
+        type: integer
+      name:
+        example: tiger name
+        type: string
+      user_id:
+        example: 1
+        type: integer
     type: object
   github_com_sourava_tiger_external_utils.HandlerErrorResponse:
     properties:
@@ -66,6 +105,38 @@ paths:
           schema:
             $ref: '#/definitions/github_com_sourava_tiger_external_utils.HandlerErrorResponse'
       summary: login api
+  /tigers:
+    get:
+      consumes:
+      - application/json
+      description: returns all tigers sorted by last time the tiger was seen.
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        required: true
+        type: integer
+      - description: Page Size
+        in: query
+        name: pageSize
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_sourava_tiger_business_tiger_response.ListAllTigersHandlerResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_sourava_tiger_external_utils.HandlerErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_sourava_tiger_external_utils.HandlerErrorResponse'
+      summary: list all tigers api
 schemes:
 - http
 swagger: "2.0"
